package Configuration;

public class Constrains {
  int pos;
  char letter;

  public Constrains(int pos, char letter) {
    this.pos = pos;
    this.letter = letter;
  }
}
